# VoidMail

./: .env.template  .gitignore  Containerfile  Makefile  README.md  compose.yaml  pyproject.toml  test_smtp.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/nginx/: supernets.online.conf
inbox/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
inbox/management/commands/: adddomain.py  cleanup.py  listdomains.py  purge_empty_mailboxes.py  smtpserver.py
inbox/migrations/: 0001_initial.py  0002_add_email_soft_delete.py  0003_domain_is_default.py
static/css/: style.css
templates/: base.html
templates/inbox/: email_detail.html  home.html  inbox.html
