[project]
name = "voidmail"
version = "0.1.0"
description = "Disposable temporary email service"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "psycopg[binary]",
    "redis",
    "granian[reload]",
    "python-decouple",
    "whitenoise",
    "aiosmtpd",
    "pillow>=12.1.0",
    "django-scheduled-tasks",
]

[dependency-groups]
dev = [
    "django-stubs",
    "ruff",
]
